--- a/test_file.Rmd
+++ b/test_file.Rmd
@@ -25,6 +25,8 @@ You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
 x<1+1
+cat(hello)
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
